# dynamodb-tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  baseline-deps.txt  cliff.toml  updated-deps.txt
.claude/: CLAUDE.md  agents  skills
.cursor/memory/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
.github/workflows/: build.yml
.tda/: config.yml
.tda/artifacts/: repo.md
fixtures/: config.yml  dev.yml  info.yml  multi_table.yml  prod.yml  seed_users.json
specs/list-files-current-directory/: code-changes.md  design.md  impl-plan.md  review-action-summary.md  review-report.md  verification-plan.md  verification-results.md
specs/update-deps-latest-version/: action-items-resolution.md  code-changes.md  design.md  impl-plan.md  review-report.md  verification-plan.md  verification-results.md
src/: config.rs  connector.rs  error.rs  lib.rs  local_client.rs
tests/: connector_integration_test.rs
