[package]
name = "dynamodb-tools"
version = "0.4.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/dynamodb-tools"
repository = "https://github.com/tyrchen/dynamodb-tools"
homepage = "https://github.com/tyrchen/dynamodb-tools"
description = """
A simple library to work with dynamodb local easy.
"""
readme = "README.md"
categories = ["development-tools"]
keywords = ["aws-sdk", "dynamodb", "testing"]

[features]
default = ["connector"]
connector = ["aws-config", "xid"]

[dependencies]
anyhow = "1.0.76"
aws-config = { version = "1.1.1", features = [
  "behavior-version-latest",
], optional = true }
aws-sdk-dynamodb = "1.9.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
xid = { version = "1.0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
