[package]
name = "dynamodb-tools"
version = "0.5.0"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/dynamodb-tools"
repository = "https://github.com/tyrchen/dynamodb-tools"
homepage = "https://github.com/tyrchen/dynamodb-tools"
description = """
A simple library to work with dynamodb local easy.
"""
readme = "README.md"
categories = ["development-tools"]
keywords = ["aws-sdk", "dynamodb", "testing"]

[features]
default = ["connector"]
connector = ["aws-config", "xid"]

[lints.clippy]
result_large_err = "allow"

[dependencies]
anyhow = "1"
aws-config = { version = "1", features = [
  "behavior-version-latest",
], optional = true }
aws-sdk-dynamodb = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
xid = { version = "1", optional = true }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
