[package]
name = "dynamodb-tools"
version = "0.5.0"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/dynamodb-tools"
repository = "https://github.com/tyrchen/dynamodb-tools"
homepage = "https://github.com/tyrchen/dynamodb-tools"
description = """
A simple library to work with dynamodb local easy.
"""
readme = "README.md"
categories = ["development-tools"]
keywords = ["aws-sdk", "dynamodb", "testing"]

[features]
default = ["connector", "test_utils"]
connector = ["aws-config", "xid"]
test_utils = ["tokio"]

[lints.clippy]
result_large_err = "allow"

[dependencies]
anyhow = "1"
aws-config = { version = "1", features = [
  "behavior-version-latest",
], optional = true }
aws-sdk-dynamodb = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
], optional = true }
xid = { version = "1", optional = true }

[dev-dependencies]
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
